--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,24 +2,99 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       th:with="currentPage='home'" layout:decorator="layout">
 <head>
-    <title>Home</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta charset="UTF-8"/>
+    <title>Playlistr</title>
+    <th:block th:fragment="includes">
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+              integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+              crossorigin="anonymous"/>
+        <link rel="stylesheet" th:href="@{/css/custom.css}"
+              href="../static/css/custom.css" />
+
+        <!-- Optional theme -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+              integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
+              crossorigin="anonymous"/>
+    </th:block>
 </head>
 <body>
+<th:block th:fragment="menu">
+    <!-- Fixed navbar -->
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                        aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/">Playlistr</a>
+            </div>
+            <div id="navbar" class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li th:classappend="${currentPage == 'home'} ? 'active'"><a href="/">Home</a></li>
+                    <li th:classappend="${currentPage == 'playlists'} ? 'active'"><a href="/playlists">Playlists</a></li>
+                    <li th:classappend="${currentPage == 'me'} ? 'active'"><a href="/user">Me</a></li>
+                    <li th:classappend="${currentPage == 'about'} ? 'active'"><a href="/about">About</a></li>
+                </ul>
+            </div><!--/.nav-collapse -->
+        </div>
+    </nav>
+</th:block>
 
 <div class="container" layout:fragment="content">
     <div class="page-header">
         <h1>Welcome to the Deezer Playlist Creator</h1>
     </div>
-    <p class="lead">This application was designed with two main objectives in mind:
-    <ol>
-        <li>To form a tutorial for Spring Boot, Spring MVC and Various front-end technologies</li>
-        <li>To allow users to bulk-create playlists on Deezer (As Deezer currently doesn't have this functionality)</li>
-    </ol>
-    </p>
-    <a th:if="${!isUserLoggedIn}" href="/authenticate" class="btn btn-default">Login to Deezer</a>
+    <div>
+        <p class="lead">This application is intended to be an enhacement to Deezer (as well as other music streaming services one day) by allowing bulk editing of playlists. This includes (but is not limited to):
+        <ul>
+            <li>Creating new Playlists</li>
+            <li>Deleting Playlists</li>
+            <li>Bulk adding of songs to Playlists</li>
+            <li>Bulk removing songs from Playlists</li>
+            <li>Support for many Playlist file uploads (Future)</li>
+        </ul>
+        </p>
+
+        <p>Eventually, this site / application will also allow users to collaboratively create real-time playlists. In other words, It will allow multiple users to login and add songs to the playlists. Users will also be allowed to vote / rank playlists, allowing the songs that the majority of people want to listen to to float to the top, while the less popular ones sink to the bottom. Democracy! Yeah!</p>
+
+        <p>Other future enhacenments include allowing support for multiple streaming services, such as Google Play music, Spotify, etc.</p>
+
+        <p>To find out more about this application, or to build it yourself, go to the <a href="/about">about</a> section.</p>
+
+    </div>
+
+    <div th:switch="${isUserLoggedIn}">
+        <p th:case="false">In order to get started you will need to <a href="/authenticate" class="btn btn-default">Login to Deezer</a> and provide permission for this site to your Deezer account.</p>
+        <p th:case="true">You are already logged in. <a href="/logout" class="btn btn-default">Logout</a> to clear your data or to login with a different account</p>
+        <p><strong>NOTE:</strong> Apart from storing your access token (in order to communicate with Deezer) for your session, this site does not store any other data about you. Rather, it simply provides an interface to Deezer.</p>
+    </div>
+
 </div>
 
+<th:block th:fragment="footer">
+    <footer class="footer">
+        <div class="container">
+            <p class="text-muted">Created by Jesse Leresche</p>
+        </div>
+    </footer>
 
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous"></script>
+
+</th:block>
 </body>
 </html>
