Added Layout to html templates to allow viewing of files statically

--- a/src/main/resources/templates/getPlaylist.html
+++ b/src/main/resources/templates/getPlaylist.html
@@ -2,10 +2,50 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       th:with="currentPage='playlists'" layout:decorator="layout">
 <head>
-    <title>Get Playlist</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta charset="UTF-8"/>
+    <title>Playlistr</title>
+    <th:block th:fragment="includes">
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+              integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+              crossorigin="anonymous"/>
+        <link rel="stylesheet" th:href="@{/css/custom.css}"
+              href="../static/css/custom.css"/>
+
+        <!-- Optional theme -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+              integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
+              crossorigin="anonymous"/>
+    </th:block>
 </head>
 <body>
+<th:block th:fragment="menu">
+    <!-- Fixed navbar -->
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                        aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/">Playlistr</a>
+            </div>
+            <div id="navbar" class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li th:classappend="${currentPage == 'home'} ? 'active'"><a href="/">Home</a></li>
+                    <li th:classappend="${currentPage == 'playlists'} ? 'active'"><a href="/playlists">Playlists</a>
+                    </li>
+                    <li th:classappend="${currentPage == 'me'} ? 'active'"><a href="/user">Me</a></li>
+                    <li th:classappend="${currentPage == 'about'} ? 'active'"><a href="/about">About</a></li>
+                </ul>
+            </div><!--/.nav-collapse -->
+        </div>
+    </nav>
+</th:block>
+
 <div layout:fragment="content" class="container" id="content">
     <script th:inline="javascript">
         /*<![CDATA[*/
@@ -40,9 +80,9 @@
                 <tbody>
                 <tr th:each="tracks : ${tracksList}">
                     <td class="middle-align">
-                    <span th:if="${#lists.isEmpty(tracks.tracklist)}">
-                        No Matches Found
-                    </span>
+                        <span th:if="${#lists.isEmpty(tracks.tracklist)}">
+                            No Matches Found
+                        </span>
                         <select class="form-control" th:if="${not #lists.isEmpty(tracks.tracklist)}"
                                 th:field="*{tracklist[__${tracksStat.index}__].id}" onchange="songPreviewChange(this)">
                             <option th:each="track : ${tracks.tracklist}"
@@ -96,7 +136,7 @@
                 </thead>
                 <tbody>
                 <tr th:each="tracklist : *{tracks.tracklist}">
-                    <td><img src="http://placehold.it/350x150"
+                    <td><img src="http://placehold.it/50x50"
                              th:src="@{*{tracks.tracklist[__${tracklistStat.index}__].album.cover_small}}"/></td>
                     <td class="middle-align" th:text="*{tracks.tracklist[__${tracklistStat.index}__].title}">Test
                         Title
@@ -122,5 +162,26 @@
 
     </div>
 </div>
+
+<th:block th:fragment="footer">
+    <footer class="footer">
+        <div class="container">
+            <p class="text-muted">Created by Jesse Leresche</p>
+        </div>
+    </footer>
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous"></script>
+
+</th:block>
 </body>
 </html>
