--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      th:with="currentPage='about'" layout:decorator="layout">
 <head>
     <meta charset="UTF-8"/>
     <title>Playlistr</title>
@@ -9,7 +10,7 @@
               integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
               crossorigin="anonymous"/>
         <link rel="stylesheet" th:href="@{/css/custom.css}"
-              href="../static/css/custom.css" />
+              href="../static/css/custom.css"/>
 
         <!-- Optional theme -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
@@ -35,25 +36,35 @@
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li th:classappend="${currentPage == 'home'} ? 'active'"><a href="/">Home</a></li>
-                    <li th:classappend="${currentPage == 'playlists'} ? 'active'"><a href="/playlists">Playlists</a></li>
+                    <li th:classappend="${currentPage == 'playlists'} ? 'active'"><a href="/playlists">Playlists</a>
+                    </li>
                     <li th:classappend="${currentPage == 'me'} ? 'active'"><a href="/user">Me</a></li>
-                    <li th:classappend="${currentPage == 'about'} ? 'active'"><a href="/about">About</a></li>
+                    <li><a href="#about">About</a></li>
                 </ul>
             </div><!--/.nav-collapse -->
         </div>
     </nav>
 </th:block>
 
-<!-- Begin page content -->
 <div class="container" layout:fragment="content">
     <div class="page-header">
-        <h1>Sticky footer with fixed navbar</h1>
+        <h1>About Playlistr</h1>
     </div>
-    <p class="lead">Pin a fixed-height footer to the bottom of the viewport in desktop browsers with this custom HTML
-        and CSS. A fixed navbar has been added with <code>padding-top: 60px;</code> on the <code>body &gt;
-            .container</code>.</p>
-    <p>Back to <a href="../sticky-footer">the default sticky footer</a> minus the navbar.</p>
+    <div>
+
+        <p class="lead">This application was designed with two main objectives in mind:</p>
+        <ol>
+            <li>To add some features to Deezer that are currently not available via the website or applications
+            </li>
+            <li>To form a tutorial for Spring Boot, Spring MVC and Spring Thymeleaf</li>
+        </ol>
+
+        <p>If you would like to view the source code for this application, or would like to build the application yourself, please go to the <a href="https://github.com/JesseLeresche/Playlistr" target="_blank">Github</a> page</p>
+
+        <p>Application built and designed by Jesse Leresche</p>
+    </div>
 </div>
+
 
 <th:block th:fragment="footer">
     <footer class="footer">
