--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -36,7 +36,7 @@
                 <ul class="nav navbar-nav">
                     <li th:classappend="${currentPage == 'home'} ? 'active'"><a href="/">Home</a></li>
                     <li th:classappend="${currentPage == 'playlists'} ? 'active'"><a href="/playlists">Playlists</a></li>
-                    <li th:classappend="${currentPage == 'me'} ? 'active'"><a href="/user">Me</a></li>
+                    <li th:classappend="${currentPage == 'me'} ? 'active'"><a href="/user/me">Me</a></li>
                     <li th:classappend="${currentPage == 'about'} ? 'active'"><a href="/about">About</a></li>
                 </ul>
             </div><!--/.nav-collapse -->
